# python_crash_course

./: .gitignore  .pdm-python  NOTES.md  README.md  mypy.ini  pyproject.toml
ch1_getting_started/: 1.1_python.org.py  1.2_hello_world_typos.py  hello_world.py
ch2_ variables_and_simple_data_types/: 2.11_adding_comments.py  2.12_zen_of_python.py  2.7_stripping_names.py  number.py
ch2_variables_and_simple_data_types/: 2.10_favorite_number copy.py  2.10_favorite_number.py  2.12_zen_of_python.py  2.1_simple_message.py  2.2_simple_messages.py  2.3_personal_message.py  2.4_name_cases.py  2.7_stripping_names.py  2.9_number_eight.py  hello_world.py  number.py  string.py
ch3_introducing_lists/: 3.10_every_function.py  3.11_intentional_error.py  3.1_names.py  3.2_greetings.py  3.3_your_own_list.py  3.4_guest_list copy.py  3.5_changing_guest_list copy.py  3.5_changing_guest_list.py  3.6_more_guests.py  3.7_shrinking_guest_list.py  3.8_seeing_the_world.py  3.9_dinner_guests copy.py  list.py
ch4_working_with_lists/: 4.10_slices.py  4.11_my_pizzas_your_pizzas.py  4.13_buffet.py  4.14_pep8.py  4.15_code_review.py  4.1_pizzas.py  4.2_animals.py  4.3_counting_to_twenty.py  4.4_one_million.py  4.6_odd_numbers.py  4.8_cubes.py  4.9_cube_comprehension.py  tuple.py  working_with_lists.py
ch5_if_statements/: 5.10_checking_usernames copy.py  5.11_ordinal_numbers.py  5.12_styling_if_statements.py  5.1_conditional_tests copy.py  5.1_conditional_tests.py  5.2_more_conditional_tests.py  5.3_alien_colors#1.py  5.4_alien_colors#2.py  5.5_alien_colors#3.py  5.6_stages_of_life.py  if.py  (+3 more)
(+123 files in other folders)
