[project]
name = "python-crash-course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lu Yucheng", email = "3170103552@zju.edu.cn"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true